# 1DM1103V2021Z

./: CMakeLists.txt  README.md
S01/: CMakeLists.txt  pr2.c  s01pr01.c  s01pr02.c
S02/: CMakeLists.txt  README.md  colors.h  s02pr01.c  s02pr02.c  s02pr03.c  s02pr04.c  s02pr05.c  s02pr06.c  s02pr07.c  s02pr08.c  s02pr09.c  s02pr10.c  s02pr11.c  s02pr12.c  s02pr13.c  s02pr14.c
S03/: CMakeLists.txt  funkcja_przelicz.c  funkcja_przelicz.h  s03pr01.c  s03pr02.c  s03pr03.c  s03pr04.c  s03pr05.c  s03pr05.txt  s03pr06.c  s03pr07.c  s03pr07.txt  test.c  we.txt
S04/: CMakeLists.txt  readme.md  s04pr01.c  s04pr02.c  s04pr03.c  s04pr04.c  s04pr05.c  s04pr06.c  s04pr07.c  utils.c  utils.h
S05/: CMakeLists.txt  s05pr01.c  s05pr02.c  s05pr03.c  s05pr04.c  s05pr05.c
S06/: CMakeLists.txt  s06pr01.c  s06pr02.c  s06pr03.c  s06pr04.c
S07/: CMakeLists.txt  s07pr01.c  s07pr02a.c  s07pr02c.c  sb.c
S08/: CMakeLists.txt  s08pr01.c  s08pr02.c  sb.h
S09/: CMakeLists.txt  s09pr01.c  s09pr02.c  s09pr03.c  s09pr04.c  s09pr05.c
S10/: CMakeLists.txt  s10pr01.c  s10pr02.c  s10pr03.c  s10pr04.c  s10pr05.c  s10pr06.c  s10pr07.c  s10pr08.c
S11/: CMakeLists.txt  s11pr01.c  s11pr02.c  s11pr03.c
S12/: CMakeLists.txt  s12pr01.c  s12pr02.c  s12pr03.c  s12pr04.c
testowanie/: Makefile  README.md
testowanie/include/: math_utils.h  str_utils.h  test_framework.h
testowanie/src/: math_utils.c  str_utils.c
testowanie/test/: test_main.c  test_math_utils.c  test_str_utils.c
