add_executable(s02pr01 s02pr01.c)
add_executable(s02pr02 s02pr02.c)
add_executable(s02pr03 s02pr03.c)
add_executable(s02pr04 s02pr04.c)
add_executable(s02pr05 s02pr05.c)
add_executable(s02pr06 s02pr06.c)
add_executable(s02pr07 s02pr07.c)
add_executable(s02pr08 s02pr08.c)
add_executable(s02pr09 s02pr09.c)
add_executable(s02pr10 s02pr10.c)
add_executable(s02pr11 s02pr11.c)
add_executable(s02pr12 s02pr12.c)
add_executable(s02pr13 s02pr13.c)
