add_executable(s10pr01 s10pr01.c)
add_executable(s10pr02 s10pr02.c)
add_executable(s10pr03 s10pr03.c)
add_executable(s10pr04 s10pr04.c)
add_executable(s10pr05 s10pr05.c)
add_executable(s10pr06 s10pr06.c)
add_executable(s10pr07 s10pr07.c)
target_link_libraries(s10pr07 m)
add_executable(s10pr08 s10pr08.c)