add_executable(s11pr01 s11pr01.c)
add_executable(s11pr02 s11pr02.c)
add_executable(s11pr03 s11pr03.c)
#add_executable(s10pr04 s10pr04.c)
#add_executable(s10pr05 s10pr05.c)
#add_executable(s10pr06 s10pr06.c)
#add_executable(s10pr07 s10pr07.c)
#target_link_libraries(s10pr07 m)
#add_executable(s10pr08 s10pr08.c)